hw16/kube/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-app
  # namespace: default
  labels:
    app: library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "library"
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 1
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: "library"
    spec:
      containers:
        - name: library-app
          image: bmv/library:0.0.2
          args:
             - --bind_ip
             - 0.0.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
#              hostPort: 8080
            - containerPort: 8090
#              hostPort: 8090
          resources:
            requests:
              cpu: "250m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
